php and database files created

--- a/login brandon/Login-Project/index.html
+++ b/login brandon/Login-Project/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container" id="signUp">
         <h1 class="title">Register</h1><!--giving form title-->
-        <form method="post" action=""><!-- added action -->
+        <form method="post" action="register.php"><!-- added action -->
             <div class="input-group">
                 <i class="fas fa-user"></i><!--for the icon-->
                 <input type="text" name="fName" placeholder="First-Name" id="fName" required>
